added JS helpers on addItem page added sequences to tables maped selects to value, switch back to integer keys for selects instead of strings added ico for bootstrap added switch button for answer correctness added action to removeEditItem

--- a/src/main/webapp/css/generic.css
+++ b/src/main/webapp/css/generic.css
@@ -7,3 +7,11 @@
     padding: 15px;
     margin: 0 auto;
 }
+
+.currentItem{
+    background-color: beige;
+}
+
+/*.has-error{*/
+    /*border-style: solid;*/
+/*}*/
